Revert "Card width increased to prevent squished look"
This reverts commit 9fcf710a11989b1ea9e67fbb5bdb62aabb28c8fa.

--- a/frontendmentor-projects/qr-code-component-main/style.css
+++ b/frontendmentor-projects/qr-code-component-main/style.css
@@ -99,7 +99,7 @@ body {
   }
 
   .card {
-    width: 90%;
+    width: 70%;
     background-color: hsl(0, 0%, 100%);
     padding: 16px 24px;
     display: flex;
